force-app/main/default/objects/Staging_Results__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Result_Url__c</fullName>
        <label>Batch Result Url</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Staging Results</relationshipLabel>
        <relationshipName>Staging_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversion_Executed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conversion Executed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Staging_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Accounts_Converted__c</fullName>
        <label>Number of Accounts Converted</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts_Converted__c</fullName>
        <label>Number of Contacts Converted</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunities_Converted__c</fullName>
        <label>Number of Opportunities Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Staging Results</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Conversion_Executed_by__c</columns>
        <columns>Campaign__c</columns>
        <columns>Number_of_Accounts_Converted__c</columns>
        <columns>Number_of_Contacts_Converted__c</columns>
        <columns>Number_of_Opportunities_Converted__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Staging Results</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>